Integrating-other-services/Kafka/MSK/SASL-SCRAM/template.yml
AWSTemplateFormatVersion: "2010-09-09"
Transform: AWS::Serverless-2016-10-31
Description: MSK triggered Lambda
Parameters:
  # Project Name Parameter
  ProjectPrefix:
    Type: String
    Default: ""

  VpcId:
    Type: AWS::EC2::VPC::Id

  PrivateSubnetAId:
    Type: AWS::EC2::Subnet::Id
  # PrivateSubnetBId:
  #   Type: String
  PrivateSubnetCId:
    Type: AWS::EC2::Subnet::Id
  # PrivateSubnetDId:
  #   Type: String

  EsmEnabled:
    Type: String
    AllowedValues:
      - true
      - false

Resources:
  #-------------------------------------------------------
  # MSK
  #-------------------------------------------------------
  MSKCluster:
    Type: AWS::MSK::Cluster
    Properties:
      BrokerNodeGroupInfo:
        ClientSubnets:
          - !Ref PrivateSubnetAId
          - !Ref PrivateSubnetCId
        InstanceType: kafka.m7g.large
        SecurityGroups:
          - !Ref SecurityGroupForMSK
        StorageInfo:
          EBSStorageInfo:
            VolumeSize: 100
      ClusterName: !Sub ${ProjectPrefix}Cluster
      ClientAuthentication:
        Sasl:
          Scram:
            Enabled: true
      EncryptionInfo:
        EncryptionInTransit:
          ClientBroker: TLS
          InCluster: true
      KafkaVersion: 3.9.x.kraft
      # The target number of broker nodes in the cluster must be a multiple of the number of availability zones (AZs) in the client subnets parameter. For example, a cluster with subnets in two AZs must have a target number of nodes that is a multiple of two.
      NumberOfBrokerNodes: 2
      StorageMode: LOCAL

  SecurityGroupForMSK:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub ${ProjectPrefix}SecurityGroupForMSK
      GroupDescription: This is for SecurityGroupForMSK
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        # SASL/SCRAM
        - CidrIp: "0.0.0.0/0"
          Description: SecurityGroupForMSK
          FromPort: 9096
          IpProtocol: tcp
          ToPort: 9096
      Tags:
        - Key: Name
          Value: !Sub ${ProjectPrefix}SecurityGroupForMSK

  ScramSecret:
    Type: AWS::SecretsManager::Secret
    Properties:
      Name: !Sub AmazonMSK_${ProjectPrefix}LambdaEsm
      KmsKeyId: !Ref ScramSecretKey
      Description: SASL/SCRAM credentials for MSK, used by the cluster and by the Lambda ESM
      GenerateSecretString:
        SecretStringTemplate: '{"username": "test-user"}'
        GenerateStringKey: password
        PasswordLength: 32
        ExcludePunctuation: true

  ScramSecretAssociation:
    Type: AWS::MSK::BatchScramSecret
    Properties:
      ClusterArn: !Ref MSKCluster
      SecretArnList:
        - !Ref ScramSecret

  ScramSecretKey:
    Type: AWS::KMS::Key
    Properties:
      Description: !Sub ${ProjectPrefix}Key for the MSK SASL/SCRAM secret
      EnableKeyRotation: true
      PendingWindowInDays: 20
      KeyPolicy:
        Version: 2012-10-17
        Id: key-default-1
        Statement:
          - Sid: AllowAccountAdministration
            Effect: Allow
            Principal:
              AWS: !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:root
            Action: kms:*
            Resource: "*"
          - Sid: AllowUserThroughSecretsManager
            Effect: Allow
            Principal:
              AWS: "*"
            Action:
              - kms:Decrypt
              - kms:Encrypt
              - kms:GenerateDataKey
              - kms:ReEncrypt*
              - kms:DescribeKey
              - kms:CreateGrant
            Resource: "*"
            Condition:
              StringEquals:
                kms:CallerAccount: !Ref AWS::AccountId
                kms:ViaService: !Sub secretsmanager.${AWS::Region}.amazonaws.com

  #-------------------------------------------------------
  # VPC Endpoint
  #-------------------------------------------------------
  STSVpcEndpointSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub ${ProjectPrefix}STSVpcEndpointSecurityGroup
      GroupDescription: This is for STSVpcEndpointSecurityGroup
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - CidrIp: "0.0.0.0/0"
          Description: STSVpcEndpointSecurityGroup
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443
      Tags:
        - Key: Name
          Value: !Sub ${ProjectPrefix}STSVpcEndpointSecurityGroup

  STSVpcEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      VpcEndpointType: "Interface"
      ServiceName: !Sub com.amazonaws.${AWS::Region}.sts
      VpcId: !Ref VpcId
      PrivateDnsEnabled: true
      SubnetIds:
        - !Ref PrivateSubnetAId
        - !Ref PrivateSubnetCId
      SecurityGroupIds:
        - !Ref STSVpcEndpointSecurityGroup

  LambdaVpcEndpointSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub ${ProjectPrefix}LambdaVpcEndpointSecurityGroup
      GroupDescription: This is for LambdaVpcEndpointSecurityGroup
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - CidrIp: "0.0.0.0/0"
          Description: LambdaVpcEndpointSecurityGroup
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443
      Tags:
        - Key: Name
          Value: !Sub ${ProjectPrefix}LambdaVpcEndpointSecurityGroup

  LambdaVpcEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      VpcEndpointType: Interface
      ServiceName: !Sub com.amazonaws.${AWS::Region}.lambda
      VpcId: !Ref VpcId
      PrivateDnsEnabled: true
      SubnetIds:
        - !Ref PrivateSubnetAId
        - !Ref PrivateSubnetCId
      SecurityGroupIds:
        - !Ref LambdaVpcEndpointSecurityGroup

  SecretsManagerVpcEndpointSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub ${ProjectPrefix}SecretsManagerVpcEndpointSecurityGroup
      GroupDescription: This is for SecretsManagerVpcEndpointSecurityGroup
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - CidrIp: "0.0.0.0/0"
          Description: SecretsManagerVpcEndpointSecurityGroup
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443
      Tags:
        - Key: Name
          Value: !Sub ${ProjectPrefix}SecretsManagerVpcEndpointSecurityGroup

  SecretsManagerVpcEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      VpcEndpointType: Interface
      ServiceName: !Sub com.amazonaws.${AWS::Region}.secretsmanager
      VpcId: !Ref VpcId
      PrivateDnsEnabled: true
      SubnetIds:
        - !Ref PrivateSubnetAId
        - !Ref PrivateSubnetCId
      SecurityGroupIds:
        - !Ref SecretsManagerVpcEndpointSecurityGroup

  #-------------------------------------------------------
  # CloudWatch LogGroup
  #-------------------------------------------------------
  TargetLambdaFunctionLogGroup:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: !Sub /aws/lambda/${TargetLambdaFunction}

  #-------------------------------------------------------
  # Lambda
  #-------------------------------------------------------
  TargetLambdaFunction:
    Type: AWS::Serverless::Function
    Properties:
      CodeUri: Lambda/lambda_function
      FunctionName: !Sub ${ProjectPrefix}MSK-Lambda-Function-SCRAM
      Handler: lambda_function.lambda_handler
      MemorySize: 128
      Role: !Sub ${LambdaRole.Arn}
      Runtime: python3.15
      # Max 14 minutes
      # https://docs.aws.amazon.com/lambda/latest/dg/with-msk-process.html
      Timeout: 840
      Tracing: Active
      Environment:
        Variables:
          LOG_LEVEL: DEBUG

  TargetLambdaFunctionEventSourceMapping:
    Type: AWS::Lambda::EventSourceMapping
    DependsOn: ScramSecretAssociation
    Properties:
      Enabled: !Ref EsmEnabled
      EventSourceArn: !Ref MSKCluster
      FunctionName: !Ref TargetLambdaFunction
      Topics:
        - MSKTutorialTopic
      StartingPosition: LATEST
      BatchSize: 10
      SourceAccessConfigurations:
        - Type: SASL_SCRAM_512_AUTH
          URI: !Ref ScramSecret
      # ProvisionedPollerConfig:
      #   MinimumPollers: 1
      #   MaximumPollers: 2

  # ------------------------------------------------------------#
  # IAM
  # ------------------------------------------------------------#
  LambdaRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - lambda.amazonaws.com
            Action:
              - sts:AssumeRole
      Path: /
      Policies:
        - PolicyName: root
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Effect: Allow
                Action:
                  - secretsmanager:GetSecretValue
                  - kms:Decrypt
                  - kafka:ListScramSecrets
                  - kafka:DescribeCluster
                  - kafka:DescribeClusterV2
                  - kafka:GetBootstrapBrokers
                Resource: "*"
              - Effect: Allow
                Action:
                  - ec2:AssignPrivateIpAddresses
                  - ec2:CreateNetworkInterface
                  - ec2:DeleteNetworkInterface
                  - ec2:DescribeNetworkInterfaces
                  - ec2:DescribeSecurityGroups
                  - ec2:DescribeSubnets
                  - ec2:DescribeVpcs
                  - ec2:UnassignPrivateIpAddresses
                Resource: "*"
              - Effect: Allow
                Action: logs:*
                Resource: "*"
      RoleName: !Sub ${ProjectPrefix}LambdaRole

Outputs:
  MSKClusterArn:
    Description: MSKClusterArn
    Value: !Sub ${MSKCluster.Arn}
    Export:
      Name: !Sub ${AWS::StackName}-MSKClusterArn
